made JobServiceTest.java and added mocks for it, also made fixes to JobService because of the tests