@@ -81,7 +81,6 @@ public abstract class Job {
             sendErrorMessage("is not currently employed in this store\n");
         }
     }
-
     protected void alertStoreClosed() {
         StringBuilder sb = new StringBuilder();
         sb.append("Store: ").append(myStore.getId()).append(". closed\n");
@@ -131,7 +130,7 @@ public abstract class Job {
         StringBuilder sb = new StringBuilder();
         if (founder) sb.append("founder: \n");
         sb.append("userID: ").append(this.getMyID());
-        if (!founder)sb.append("my SuperiorID: ").append(this.mySuperiors.getFirst().getMyID()).append("\n");
+        if (!founder)sb.append("my SuperiorID: ").append(this.mySuperiors.get(0).getMyID()).append("\n");
         if(!(this instanceof Managing)) sb.append("my subordinates: \n");
         int i = 1;
         for(Job j : mySubordinates) {
